@@ -8,7 +8,5 @@ Merge *rqda from different coders.
 
 inter-coder reliability 
 
-change Highlight behavior of Case.
-
 ### less important
 should add document on the table structure.
